--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -30,12 +25,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <style>
+    #reimbursementOuterDialogSpinner {
+      border: 16px solid #f3f3f3;
+      /* Light grey */
+      border-top: 16px solid #3498db;
+      /* Blue */
+      border-radius: 50%;
+      width: 64px;
+      height: 64px;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -45,5 +62,87 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+  <dialog id="reimbursement-form-outer-dialog">
+    <p id="ReimbursementOuterDialogBodyText">dialog message goes here</p>
+
+    <div id="reimbursementOuterDialogSpinner"></div>
+    <!-- <button autofocus id="ReimbursementFormOuterDialogButton">Close</button> -->
+    <form method="dialog" style="display: none" id="ReimbursementFormOuterDialogForm">
+      <button type="submit" id="ReimbursementFormOuterDialogButton">Close</button>
+    </form>
+  </dialog>
+  <script>
+
+
+    (() => {
+      // const openDialog = document.getElementById("openDialog");
+      const dialog = document.querySelector("dialog#reimbursement-form-outer-dialog");
+      const dialogForm = document.querySelector("dialog #ReimbursementFormOuterDialogForm");
+      const dialogCloseButton = document.querySelector("dialog #ReimbursementFormOuterDialogButton");
+      const dialogBodyText = document.querySelector("dialog #ReimbursementOuterDialogBodyText");
+      const dialogSpinner = document.querySelector("dialog #reimbursementOuterDialogSpinner");
+      // dialog.showModal();
+
+      // function openCheck(dialog) {
+      //   if (dialog.open) {
+      //     text.innerText = "Dialog open";
+      //   } else {
+      //     text.innerText = "Dialog closed";
+      //   }
+      // }
+      let reimbursementFormOuterTimer = null;
+
+      // Update button opens a modal dialog
+      // openDialog.addEventListener("click", () => {
+      //   dialog.showModal();
+      //   openCheck(dialog);
+      // });
+
+      // dialog.addEventListener("close", () => {
+      //   openCheck(dialog);
+      // });
+
+      window.addEventListener('message', e => {
+        // console.log(e.data);
+        const key = e.message ? 'message' : 'data';
+        const data = e[key];
+
+        if (data.origin === "reimbursementFormIframe") {
+
+          // console.log(data);
+
+          dialog.showModal();
+          
+          dialogSpinner.style.display = "none";
+          dialogForm.style.display = "none";
+          clearTimeout(reimbursementFormOuterTimer);
+
+
+          dialogBodyText.innerText = data.bodyText;
+
+          if (data.showSpinner === true) {
+            dialogSpinner.style.display = "block";
+          }
+          if (data.showCloseButton === true) {
+            dialogForm.style.display = "block";
+          } else {
+            // dialogForm.style.display = "none";
+            reimbursementFormOuterTimer = setTimeout(() => {
+              dialogForm.style.display = "block";
+              dialogBodyText.innerText = "Uh oh, this shouldn't take so long.";
+            }, 10000); // 10000 milliseconds = 10 seconds
+          }
+          // openCheck(dialog);
+          // ...
+
+        }
+
+
+      }, false);
+
+    })();
+
+  </script>
+</body>
+
 </html>
